html lang change

--- a/source.html
+++ b/source.html
@@ -4,23 +4,23 @@
         <title>MLMD lab-2</title>
     </head>
     <body>
-        <h2>Enter size of the matrix and check the relation needed</h2>
+        <h2>Введите размерность матрицы nxn и укажите требуемое свойство отношения</h2>
 
         <form name="mainform" method="POST" action="javascript:;" onsubmit="mainjsfunc();">
 
             <label for="text">n?=</label>
             <input type="text" id="text" placeholder="nxn matrix size"><br>
             
-            <label for="flag1">Reflex</label>
+            <label for="flag1">Рефлексивность</label>
             <input name="radio" type="radio" id="flag1"><br>
 
-            <label for="flag2">Symm</label>
+            <label for="flag2">Симметричность</label>
             <input name="radio" type="radio" id="flag2"><br>
 
-            <label for="flag3">KSym</label>
+            <label for="flag3">Кососимметричность</label>
             <input name="radio" type="radio" id="flag3"><br>
 
-            <label for="flag4">Trans</label>
+            <label for="flag4">Тразитивность</label>
             <input name="radio" type="radio" id="flag4"><br>
 
             <input type="submit"   value="Submit">
