transitive lefto 2do

--- a/source.html
+++ b/source.html
@@ -4,21 +4,52 @@
         <title>MLMD lab-2</title>
     </head>
     <body>
-        <h2>Введите размерность матрицы nxn и укажите требуемое свойство отношения</h2>
+        <h2>Введите матрицу nxn</h2>
 
         <form name="mainform" method="POST" action="javascript:;" onsubmit="mainjsfunc()">
-
-            <label for="text">nxn matrix size, n=</label>
-            <input type="text" id="n" placeholder="Например 123" required><br>
-
-            <p>
-                <select id="selector">
-                    <option>Рефлексивность</option>
-                    <option>Симметричность</option>
-                    <option>Кососимметричность</option>
-                    <option>Тразитивность</option>
-                </select>
-            </p>
+            
+                <input type="checkbox" id="cb11">
+                <input type="checkbox" id="cb12">
+                <input type="checkbox" id="cb13">
+                <input type="checkbox" id="cb14">
+                <input type="checkbox" id="cb15">
+                <input type="checkbox" id="cb16">
+                <br>
+                <input type="checkbox" id="cb21">
+                <input type="checkbox" id="cb22">
+                <input type="checkbox" id="cb23">
+                <input type="checkbox" id="cb24">
+                <input type="checkbox" id="cb25">
+                <input type="checkbox" id="cb26">
+                <br>
+                <input type="checkbox" id="cb31">
+                <input type="checkbox" id="cb32">
+                <input type="checkbox" id="cb33">
+                <input type="checkbox" id="cb34">
+                <input type="checkbox" id="cb35">
+                <input type="checkbox" id="cb36">
+                <br>
+                <input type="checkbox" id="cb41">
+                <input type="checkbox" id="cb42">
+                <input type="checkbox" id="cb43">
+                <input type="checkbox" id="cb44">
+                <input type="checkbox" id="cb45">
+                <input type="checkbox" id="cb46">
+                <br>
+                <input type="checkbox" id="cb51">
+                <input type="checkbox" id="cb52">
+                <input type="checkbox" id="cb53">
+                <input type="checkbox" id="cb54">
+                <input type="checkbox" id="cb55">
+                <input type="checkbox" id="cb56">
+                <br>
+                <input type="checkbox" id="cb61">
+                <input type="checkbox" id="cb62">
+                <input type="checkbox" id="cb63">
+                <input type="checkbox" id="cb64">
+                <input type="checkbox" id="cb65">
+                <input type="checkbox" id="cb66">
+                <br>
 
             <input type="submit" value="Submit">
         </form>
