--- a/source.html
+++ b/source.html
@@ -6,52 +6,8 @@
     <body>
         <h2>Введите матрицу nxn</h2>
         <form name="mainform" method="POST" action="javascript:;" onsubmit="mainjsfunc()">
-
-            &nbsp;&nbsp; 1 &nbsp;&nbsp; 2 &nbsp;&nbsp; 3 &nbsp;&nbsp; 4 &nbsp;&nbsp; 5 &nbsp;&nbsp; 6<br>
-                1<input type="checkbox" id="cb11">
-                <input type="checkbox" id="cb12">
-                <input type="checkbox" id="cb13">
-                <input type="checkbox" id="cb14">
-                <input type="checkbox" id="cb15">
-                <input type="checkbox" id="cb16">
-                <br>
-                2<input type="checkbox" id="cb21">
-                <input type="checkbox" id="cb22">
-                <input type="checkbox" id="cb23">
-                <input type="checkbox" id="cb24">
-                <input type="checkbox" id="cb25">
-                <input type="checkbox" id="cb26">
-                <br>
-                3<input type="checkbox" id="cb31">
-                <input type="checkbox" id="cb32">
-                <input type="checkbox" id="cb33">
-                <input type="checkbox" id="cb34">
-                <input type="checkbox" id="cb35">
-                <input type="checkbox" id="cb36">
-                <br>
-                4<input type="checkbox" id="cb41">
-                <input type="checkbox" id="cb42">
-                <input type="checkbox" id="cb43">
-                <input type="checkbox" id="cb44">
-                <input type="checkbox" id="cb45">
-                <input type="checkbox" id="cb46">
-                <br>
-                5<input type="checkbox" id="cb51">
-                <input type="checkbox" id="cb52">
-                <input type="checkbox" id="cb53">
-                <input type="checkbox" id="cb54">
-                <input type="checkbox" id="cb55">
-                <input type="checkbox" id="cb56">
-                <br>
-                6<input type="checkbox" id="cb61">
-                <input type="checkbox" id="cb62">
-                <input type="checkbox" id="cb63">
-                <input type="checkbox" id="cb64">
-                <input type="checkbox" id="cb65">
-                <input type="checkbox" id="cb66">
-                <br><br>
-
-            &nbsp;&nbsp;&nbsp;<input type="submit" value="Submit">
+            <textarea cols="21" rows="10" id="arr"></textarea><br><br>
+            <input type="submit" value="Submit">
         </form>
 
         <p id="output"></p>
